--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -380,6 +380,10 @@
       align-items: center;
       justify-content: flex-start;
 
+      &:first-child {
+        padding-left: 1.5rem;
+      }
+
       &_item {
         text-align: center;
         width: calc(100% / 5);
