fix: :bug: #51 Less blank space at the top and more at bottom

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -233,6 +233,7 @@ const internalNavLinks = [
               media="(min-width: 500px)"
             />
             <img
+              class="alpd-academy__deficient-img"
               src="/assets/images/alpd-academy/k-deficient-mobile.png"
               alt=""
             />
