--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -545,7 +545,7 @@
         }
 
         .alpd-academy__symptoms-list {
-            margin-bottom: 2rem;
+            margin-bottom: 4rem;
         }
     }
 
@@ -554,6 +554,12 @@
             margin-right: auto;
             margin-left: auto;
             max-width: 831px;
+        }
+    }
+
+    .alpd-academy__deficient-img {
+        @media screen and (min-width: 1024px) {
+            margin-top: -60px;
         }
     }
 
