fix: :bug: #40 (Update) Centered tabs for hpp profile page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4731,6 +4731,10 @@
                         margin-left: -55px;
                     }
 
+                    &[href='#multisystemic3'] {
+                        margin-left: -55px;
+                    }
+
                     @media screen and (max-width: 1000px) {
                         font-size: 1rem;
                     }
