fix: :bug: #54 Sleep disturbance text should be in one line

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -645,6 +645,8 @@
 
                     line-height: 100%;
 
+                    white-space: nowrap;
+
                     &::before {
                         display: none;
                     }
