fix: :bug: #54 Sleep disturbance text shoul be in one line

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -639,6 +639,8 @@
 
                     line-height: 100%;
 
+                    white-space: nowrap;
+
                     &::before {
                         display: none;
                     }
