fix: :bug: Fix hidden numbers according to figma in profiling section

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3118,6 +3118,7 @@
         max-width: 46.625rem;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 7rem;
 
         position: relative;
 
@@ -3272,8 +3273,8 @@
             margin: 0 0 1rem 0;
             position: absolute;
             z-index: 0;
-            top: 41px;
-            left: -105px;
+            top: -11px;
+            left: -99px;
             color: $color-brown;
         }
     }
