fix: :bug: #81 Fix typos in ALP levels section
Fix typos in  ALP Levels section in Usual Suspects page

--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -91,7 +91,7 @@ const internalNavLinks = [
           <li>Cardiac bypass surgery</li>
           <li>Major trauma or surgery</li>
           <li>Chemotherapy</li>
-          <li>Transfusion(often massive)</li>
+          <li>Transfusion (often massive)</li>
           <li>Starvation</li>
           <li>Sepsis/multi-organ/hepatic failure</li>
         </ul>
@@ -101,7 +101,7 @@ const internalNavLinks = [
 
         <ul>
           <li>Osteogenesis imperfecta type II</li>
-          <li>Profound hipothyroidism</li>
+          <li>Profound hypothyroidism</li>
           <li>Cushing disease</li>
           <li>Bisphosphonate therapy</li>
           <li>Adynamic renal osteodystrophy</li>
@@ -116,7 +116,7 @@ const internalNavLinks = [
 
         <ul>
           <li>Hypophosphatasia</li>
-          <li>Ceidrocranial dysostosis</li>
+          <li>Cleidrocranial dysostosis</li>
           <li>Mseleni joint disease</li>
         </ul>
       </div>
