--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -55,8 +55,8 @@
 
         &[data-word="neurologic"] {
             .skeleton__point {
-                top: 1.5rem;
-                left: 6.8rem;
+                top: 1.45rem;
+                left: 6.7rem;
             }
 
             .skeleton__line--before {
@@ -70,6 +70,9 @@
                 left: 6.8rem;
                 z-index: 0;
             }
+            .skeleton__line--after2 {
+                display: none;
+            }
 
             .skeleton__word {
                 top: 0rem;
@@ -80,7 +83,7 @@
 
         &[data-word="dental"] {
             .skeleton__point {
-                top: 2.6rem;
+                top: 2.5rem;
                 left: 6.8rem;
             }
 
@@ -90,9 +93,9 @@
             }
 
             .skeleton__line--after {
-                width: 7.15rem;
-                top: 2.7rem;
-                left: 6.9rem;
+                width: 7.1rem;
+                top: 2.74rem;
+                left: 7rem;
                 z-index: 0;
                 transform: rotate(32deg);
                 transform-origin: left;
@@ -100,8 +103,8 @@
 
             .skeleton__line--after2 {
                 width: 25%;
-                top: 6.5rem;
-                left: calc(6.5rem + 6.5rem);
+                top: 6.51rem;
+                left: calc(7rem + 6.1rem);
                 z-index: 0;
                 
             }
@@ -130,7 +133,7 @@
             .skeleton__line--after {
                 width: 4.8rem;
                 top: 8.1rem;
-                left: 10.4rem;
+                left: 10.45rem;
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
@@ -140,7 +143,7 @@
             .skeleton__line--after2 {
                 width: 25%;
                 top: 11.5rem;
-                left: calc(10.1rem + 3.7rem);
+                left: calc(10.45rem + 3.4rem);
                 z-index: 0;
                 
             }
@@ -153,8 +156,8 @@
 
         &[data-word="rheumatic"] {
             .skeleton__point {
-                top: 11rem;
-                left: 11rem;
+                top: 10.99rem;
+                left: 10.9rem;
             }
 
             .skeleton__line--before {
@@ -163,7 +166,7 @@
             }
 
             .skeleton__line--after {
-                width: 7.65rem;
+                width: 7.60rem;
                 top: 11.1rem;
                 left: 11.1rem;
                 z-index: 0;
@@ -188,7 +191,7 @@
 
         &[data-word="renal"] {
             .skeleton__point {
-                top: 14.2rem;
+                top: 14.3em;
                 left: 8rem;
             }
 
@@ -198,9 +201,9 @@
             }
 
             .skeleton__line--after {
-                width: 10.16rem;
-                top: 14.3rem;
-                left: 8.1rem;
+                width: 9.9rem;
+                top: 14.5rem;            
+                left: 8.2rem;
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
@@ -210,7 +213,7 @@
             .skeleton__line--after2 {
                 width: 24%;
                 top: 21.5rem;
-                left: calc(7.6rem + 7.7rem);
+                left: calc(7.6rem + 7.6rem);
                 z-index: 0;
                 
             }
@@ -233,8 +236,8 @@
             }
 
             .skeleton__line--after {
-                width: 10.45rem;
-                top: 19.1rem;
+                width: 10.30rem;
+                top: 19.2rem;
                 left: 9.2rem;
                 z-index: 0;
                 transform: rotate(45deg);
@@ -245,7 +248,7 @@
             .skeleton__line--after2 {
                 width: 15%;
                 top: 26.5rem;
-                left: calc(8.6rem + 8rem);
+                left: calc(8.6rem + 7.82rem);
                 z-index: 0;
                 
             }
@@ -258,8 +261,8 @@
 
         &[data-word="neurologic--infants"] {
             .skeleton__point {
-                top: 3rem;
-                left: 6.2rem;
+                top: 2.95rem;
+                left: 6.1rem;
             }
 
             .skeleton__line--before {
@@ -288,7 +291,7 @@
 
         &[data-word="dental--infants"] {
             .skeleton__point {
-                top: 6rem;
+                top: 5.95rem;
                 left: 6.2rem;
             }
 
@@ -309,7 +312,7 @@
             .skeleton__line--after2 {
                 width: 30%;
                 top: 7.8rem;
-                left: calc(6.4rem + 4.5rem);
+                left: calc(6.5rem + 4.5rem);
                 z-index: 0;
             }
 
@@ -325,7 +328,7 @@
 
         &[data-word="muscular--infants"] {
             .skeleton__point {
-                top: 10.5rem;
+                top: 10.45rem;
                 left: 10rem;
             }
 
@@ -335,9 +338,9 @@
             }
 
             .skeleton__line--after {
-                width: 3.3rem;
-                top: 10.5rem;
-                left: 10.1rem;
+                width: 3.05rem;
+                top: 10.6rem;
+                left: 10.2rem;
                 z-index: 0;
                 transform: rotate(38deg);
                 transform-origin: left;
@@ -359,8 +362,8 @@
 
         &[data-word="respiratory--infants"] {
             .skeleton__point {
-                top: 12.5rem;
-                left: 5rem;
+                top: 12.4rem;
+                left: 4.80rem;
             }
 
             .skeleton__line--before {
@@ -380,7 +383,7 @@
             .skeleton__line--after2 {
                 width: 25%;
                 top: 17.5em;
-                left: calc(10.1rem + 3.5rem);
+                left: calc(10.1rem + 3.45rem);
                 z-index: 0;
             }
 
@@ -392,7 +395,7 @@
 
         &[data-word="rheumatic--infants"] {
             .skeleton__point {
-                top: 18rem;
+                top: 17.90rem;
                 left: 11rem;
             }
 
@@ -402,7 +405,7 @@
             }
 
             .skeleton__line--after {
-                width: 6.08em;
+                width: 6.03em;
                 top: 18.1rem;
                 left: 11.2rem;
                 z-index: 0;
@@ -414,7 +417,7 @@
             .skeleton__line--after2 {
                 width: 15%;
                 top: 22rem;
-                left: calc(10.7rem + 5.1rem);
+                left: calc(11.2rem + 4.69rem);
                 z-index: 0;
             }
 
@@ -427,7 +430,7 @@
         &[data-word="renal--infants"] {
             .skeleton__point {
                 top: 19.5rem;
-                left: 8rem;
+                left: 7.90rem;
             }
 
             .skeleton__line--before {
@@ -460,7 +463,7 @@
 
         &[data-word="orthopedic--infants"] {
             .skeleton__point {
-                top: 32.2rem;
+                top: 32.1rem;
                 left: 8.5rem;
             }
 
@@ -471,21 +474,14 @@
 
             .skeleton__line--after {
                 display: none;
-                width: 10.45rem;
-                top: 19.1rem;
-                left: 8.6rem;
-                z-index: 0;
-                transform: rotate(45deg);
-                transform-origin: left;
-                
             }
 
             .skeleton__line--after2 {
                 width: 50%;
                 top: 32.4rem;
-                left: 8.5rem;
+                left: 8.9rem;
                 z-index: 0;
-                height: 1.01px;
+                
             }
 
             .skeleton__word {
@@ -496,7 +492,7 @@
 
         &[data-word="developmental--infants"] {
             .skeleton__point {
-                top: 37rem;
+                top: 36.9rem;
                 left: 8.6rem;
             }
 
@@ -507,19 +503,13 @@
 
             .skeleton__line--after {
                 display: none;
-                width: 4.8rem;
-                top: 8.1rem;
-                left: 10.1rem;
-                z-index: 0;
-                transform: rotate(45deg);
-                transform-origin: left;
                 
             }
 
             .skeleton__line--after2 {
                 width: 50%;
                 top: 37.2rem;
-                left: 8.6rem;
+                left: 8.9rem;
                 z-index: 0;
             }
 
@@ -894,7 +884,8 @@
         width: fit-content;
         max-width: 370px;
         height: 475px;
-        border: 1px solid $color-red;
+        //border: 1px solid $color-red;
+        outline: 1px solid $color-red;
         padding: 1.5rem;
         position: relative;
 
@@ -1107,18 +1098,16 @@
 #developmental--infants-content::after {
     content: "";
     width: 50%;
-    height: 1px;
-    background-color: #CF1C0A;
+    outline: 1px solid $color-red;
     position: absolute;
-    bottom: -36.7%;
+    bottom: -36.2%;
     left: -1px;
 }
 
 #developmental--infants-content::before {
     content: "";
-    width: 41.6%;
-    height: 1px;
-    background-color: #CF1C0A;
+    width: 40.90%;
+    outline: 1px solid $color-red;
     position: absolute;
     bottom: -1px;
     left: 50%;
