fix: :bug: Fix issue 37 - Delete bottom gray line in hppprofile select

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4678,6 +4678,7 @@
 
                 .hpp-multisystemic__tabs-container {
                     background-color: $color-floral-white;
+                    margin-bottom: -1px;
                 }
 
                 .hpp-multisystemic__select--input {
