fix: :bug: Fix issue 81 - Typo in one word ALP Levels section

--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -105,7 +105,7 @@ const internalNavLinks = [
           <li>Cushing disease</li>
           <li>Bisphosphonate therapy</li>
           <li>Adynamic renal osteodystrophy</li>
-          <li>Milk-alkali syndrom</li>
+          <li>Milk-alkali syndrome</li>
           <li>Wilson disease</li>
           <li>Celiac disease</li>
           <li>Zinc/magnesium deficiency</li>
