--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -1080,7 +1080,8 @@
             font-weight: 700;
             line-height: 1.5rem;
             color: $color-white;
-            padding: 0.5rem;
+            padding: 2px;
+            margin-left: 10px;
         }
     }
 
