fix: :bug: Fix flag text aling in ALP Calculator

--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -1082,6 +1082,7 @@
             color: $color-white;
             padding: 2px;
             margin-left: 10px;
+            text-align: center;
         }
     }
 
