--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -830,6 +830,7 @@
                 font-weight: 600;
                 font-size: 13px;
                 line-height: 13px;
+                margin-top: 2rem;
                 @media screen and (min-width:745px) {
                     font-weight: 700;
                     font-size: 18px;
