--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -50,7 +50,7 @@
             background-size: 100% 100%;
 
             >[role='tabpanel'] {
-                height: 914px;
+                height: 975px;
             }
         }
 
@@ -798,7 +798,7 @@
                     line-height: 140%;
                 }
 
-                table + h5 {
+                table+h5 {
                     margin-top: 26px;
                 }
 
@@ -833,13 +833,13 @@
                 .thumbnails_group {
                     display: grid;
                     grid-template-areas: "rad rad"
-                                        "dexa1 dexa2"
-                                        "dexa3 dexa4";
+                        "dexa1 dexa2"
+                        "dexa3 dexa4";
                     justify-content: space-between;
 
                     @media screen and (min-width: 550px) {
                         grid-template-areas: "rad dexa1 dexa2"
-                                             "rad dexa3 dexa4";
+                            "rad dexa3 dexa4";
                     }
                 }
 
@@ -850,9 +850,9 @@
                 #pt-5-image-5 {
                     .patient {
                         p {
-                          font-size: 14px;
-                          line-height: 130%;
-                          margin-bottom: 12px;
+                            font-size: 14px;
+                            line-height: 130%;
+                            margin-bottom: 12px;
                         }
                     }
                 }
@@ -989,7 +989,7 @@
     }
 
     #case-p-panel-5 {
-        height: 1000px;
+        // height: 1000px;
 
         .--col-middle {
             .info_content {
@@ -1034,7 +1034,7 @@
         .thumbnails {
             display: grid;
             grid-template-areas: "rad dexa1 dexa2"
-                                "rad dexa3 dexa4";
+                "rad dexa3 dexa4";
             justify-content: space-between;
 
             .patient {
@@ -1060,7 +1060,7 @@
             .rad__thumbnail {
                 picture {
                     .button {
-                        background-color: rgba(14,14,14,0.3);
+                        background-color: rgba(14, 14, 14, 0.3);
                         width: 38.7px;
                         height: 40.5px;
                         bottom: 10px;
